infra/kustomize/base/platform/cloudflared/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudflared
  labels:
    app.kubernetes.io/part-of: threshold
    pod-security.kubernetes.io/enforce: restricted
